[tool.poetry]
name = "ua-bq-exporter"
version = "0.1.0"
description = ""
authors = ["Peter Pleško <peter.plesko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.133.0"
google-cloud-bigquery = "^3.24.0"
oauth2client = "^4.1.3"
pandas = "^2.2.2"
pyarrow = "^16.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
